hello-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  serviceName: hello
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: bob2606/hello-http:0.8.25
          name: hello-http
          ports:
            - name: http
              containerPort: 80
