nginx-php-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.26
        name: nginx
        ports:
          - name: http
            containerPort: 80
      - image: php:8.2-fpm
        name: php
