hello-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
spec:
  ingressClassName: nginx
  rules:
    - host: hello-25.stage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-25
                port:
                  number: 80
    - host: hello-26.stage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-26
                port:
                  number: 80
